<?xml version="1.0"?>
<package>
  <name>clams</name>
  <version>0.0.0</version>
  <description>clams</description>

  <maintainer email="teichman@todo.todo">Alex Teichman</maintainer>
  <maintainer email="rares@todo.todo">rares</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/clams</url>


  <author email="teichman@todo.todo">Alex Teichman</author>

  <!-- Use test_depend for packages you need only for testing: -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>stream_sequence</build_depend>
  <build_depend>bag_of_tricks</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>stream_sequence</run_depend>
  <run_depend>bag_of_tricks</run_depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
	<cpp cflags="-I${prefix}/include -fopenmp"
         lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -fopenmp -lclams"/>
  </export>
</package>

