<?xml version="1.0"?>
<package>
  <name>bag_of_tricks</name>
  <version>0.0.0</version>
  <description>bag_of_tricks</description>

  <maintainer email="teichman@todo.todo">Alex Teichman</maintainer>
  <maintainer email="rares@todo.todo">rares</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/bag_of_tricks</url>


  <author email="teichman@todo.todo">Alex Teichman</author>

  <!-- Use test_depend for packages you need only for testing: -->
  <test_depend>gtest</test_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>serializable</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>serializable</run_depend>
  


  <!-- The export tag contains other, unspecified, tags -->
  <export>

    <cpp cflags="-I${prefix}/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib `rosboost-cfg --lflags thread` -lbag_of_tricks" /> 

  </export>
</package>



