<?xml version="1.0"?>
<package>
  <name>eigen_extensions</name>
  <version>0.0.0</version>
  <description>eigen_extensions</description>

  <maintainer email="teichman@todo.todo">Alex Teichman</maintainer>
  <maintainer email="rares@todo.todo">rares</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/eigen_extensions</url>


  <author email="teichman@todo.todo">Alex Teichman</author>

  <!-- Use test_depend for packages you need only for testing: -->
  <test_depend>gtest</test_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gzstream</build_depend>
  <build_depend>timer</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>gzstream</run_depend>
  <run_depend>timer</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>

	<cpp cflags="-I${prefix}/include -I/usr/include/eigen3" lflags="-L${prefix}/lib -Wl,-rpath ${prefix}/lib `rosboost-cfg --lflags filesystem` `rosboost-cfg --lflags system` -leigen_extensions"/>

  </export>
</package>



